In BFS, we changed the data structure containing the list of positions to visit from list to linked list.  Removed an unused import.